tests/snapshots/run_wpt_conformance__litert_tanh_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tanh.https.any.js",
    "tanh float32 2D tensor",
    "litert",
    "PASS",
)
